# clux

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clux.tmux  flake.nix  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
scripts/: claude-picker.sh  install.sh  session-select.sh
src/: claude.rs  history.rs  lib.rs  main.rs  process.rs  recent.rs  tmux.rs
tests/: integration.rs
